k8s/job-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-worker
  namespace: f1-platform
spec:
  replicas: 1

  selector:
    matchLabels:
      app: job-worker

  template:
    metadata:
      labels:
        app: job-worker

    spec:
      containers:
        - name: job-worker
          image: ghcr.io/adarshk0511/f1-platform-job-service:latest
          imagePullPolicy: Always

          command: ["node", "src/workers/importWorker.js"]
