k8s/driver-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-service
  namespace: f1-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driver-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: driver-service
    spec:
      containers:
        - name: f1-platform-driver-service
          image: ghcr.io/adarshk0511/f1-platform-driver-service:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5002

          livenessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 10
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 5
            periodSeconds: 5

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: driver-service
  namespace: f1-platform
spec:
  type: ClusterIP
  selector:
    app: driver-service
  ports:
    - port: 5002
      targetPort: 5002
