k8s/job-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-service
  namespace: f1-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: job-service

  template:
    metadata:
      labels:
        app: job-service

    spec:
      containers:
        - name: job-service
          image: ghcr.io/adarshk0511/f1-platform-job-service:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: job-service
  namespace: f1-platform
spec:
  selector:
    app: job-service

  ports:
    - port: 5003
      targetPort: 5003
